# obsidian-to-hugo

./: .gitignore  LICENSE  Makefile  README.adoc  README.md  __main__.py  pyproject.toml  requirements.txt  wiki_links_processor.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
scripts/: update_calver.py
src/: __main__.py  obsidian_to_hugo.py  test_wiki_links_processor.py  wiki_links_processor.py
src/obsidian_to_hugo/: __init__.py  __main__.py  md_mark_processor.py  obsidian_to_hugo.py  wiki_links_processor.py
tests/: e2e_cli.py  processors_test.py  test_marks_processor.py  test_wiki_links_processor.py  wiki_links_processor_test.py
tests/mocks/obsidian/: note.md
web-repl/: .gitignore  .prettierrc  astro.config.ts  netlify.toml  package.json  pnpm-lock.yaml  uno.config.ts
web-repl/public/: _redirects  script.py
web-repl/src/layouts/: Layout.astro
web-repl/src/pages/: 404.astro  index.astro
